# lnote

./: .gitignore  README.md  install.sh  lnote.desktop  pyproject.toml  uninstall.sh
lnote/: __main__.py  editor.py  find_replace.py  theme.py  window.py
